@@ -5,55 +5,51 @@ import com.yunusAhmet.rentACar.core.exception.BrandAlreadyExistException;
 import com.yunusAhmet.rentACar.core.exception.BrandNotFoundException;
 import com.yunusAhmet.rentACar.dataAccess.BrandDao;
 import com.yunusAhmet.rentACar.dto.*;
+import com.yunusAhmet.rentACar.dto.converter.BrandCarDtoConverter;
+import com.yunusAhmet.rentACar.dto.converter.BrandDtoConverter;
 import com.yunusAhmet.rentACar.entity.Brand;
 import com.yunusAhmet.rentACar.entity.Car;
-import com.yunusAhmet.rentACar.entity.Color;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentMatchers;
-import org.mockito.Mockito;
-import org.mockito.Spy;
-import org.modelmapper.ModelMapper;
-
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 public class BrandManagerTest {
 
     private BrandDao brandDao;
-    private ModelMapper modelMapper;
+    private BrandCarDtoConverter brandCarDtoConverter;
+    private BrandDtoConverter brandDtoConverter;
     private BrandManager brandManager;
     @BeforeEach
     void setUp() {
         brandDao = mock(BrandDao.class);
-        modelMapper = mock(ModelMapper.class);
-        brandManager = new BrandManager(brandDao,modelMapper);
+        brandDtoConverter = mock(BrandDtoConverter.class);
+        brandCarDtoConverter = mock(BrandCarDtoConverter.class);
+        brandManager = new BrandManager(brandDao,brandDtoConverter, brandCarDtoConverter);
     }
             @Test
             public void testCreateBrand_whenMustNotFindSameBrandInDataBase_shouldReturnBrandDto(){
 
-            CreateBrandRequest request =new CreateBrandRequest("a8");
+            CreateBrandRequest request =new CreateBrandRequest("a9");
 
-            Brand brand= new Brand(0,"a8");
-            BrandDto brandDto = new BrandDto(0,"a8");
+            Brand brand= new Brand(request.getBrandName());
+            Brand saveBrand = new Brand(1,request.getBrandName());
+            BrandDto brandDto = new BrandDto(1,request.getBrandName());
 
 
-            when(brandDao.save(brand)).thenReturn(brand);
-            when(modelMapper.map(brand,BrandDto.class)).thenReturn(brandDto);
+
+            when(brandDao.save(brand)).thenReturn(saveBrand);
+            when(brandDtoConverter.convert(saveBrand)).thenReturn(brandDto);
 
 
            BrandDto result= brandManager.createBrand(request);
 
             assertEquals(brandDto,result);
             verify(brandDao).save(brand);
-            verify(modelMapper).map(brand, BrandDto.class);
+            verify(brandDtoConverter).convert(saveBrand);
 //          BrandDto brandDto=modelMapper.map(brand, BrandDto.class);
 
     }
@@ -61,9 +57,9 @@ public class BrandManagerTest {
     @Test
     public void testCreateBrand_whenBrandNameAlreadyExists_shouldReturnException() {
         CreateBrandRequest request = new CreateBrandRequest("a8");
-        Brand brand= new Brand(0,"a8");
+        Brand brand= new Brand(1,"a8");
         when(brandDao.findBrandByBrandName(brand.getBrandName())).
-                thenThrow(new BrandAlreadyExistException(Constant.BRAND_ALREADY_EXIST));
+                thenReturn(Optional.of(brand));
 
        assertThrows( BrandAlreadyExistException.class,() -> brandManager.createBrand(request) );
         verify(brandDao).findBrandByBrandName(request.getBrandName());
@@ -79,14 +75,14 @@ public class BrandManagerTest {
 
     @Test
     public void testUpdateBrand_whenBrandIdExists_shouldReturnBrandDto(){
-        UpdateBrandRequest request = new UpdateBrandRequest(0,"a1");
-        Brand brand = new Brand(0,"a2");
-        BrandDto brandDto = new BrandDto(0,"a2");
+        UpdateBrandRequest request = new UpdateBrandRequest(1,"a1");
+        Brand brand = new Brand(1,"a2");
+        BrandDto brandDto = new BrandDto(1,"a2");
         when(brandDao.findBrandByBrandName(brand.getBrandName())).thenReturn(Optional.of(brand));
 
-        when(brandDao.findById(0)).thenReturn(Optional.of(brand));
+        when(brandDao.findById(1)).thenReturn(Optional.of(brand));
         when(brandDao.save(brand)).thenReturn(brand);
-        when(modelMapper.map(brand,BrandDto.class)).thenReturn(brandDto);
+        when(brandDtoConverter.convert(brand)).thenReturn(brandDto);
 
         BrandDto result = brandManager.updateBrand(request);
 
@@ -107,20 +103,25 @@ public class BrandManagerTest {
     @Test
     public void testGetAllCar_whenGiveBrandIdExists_shouldReturnListOfCar(){
         int brandId=2;
-        BrandCarDto brandCarDto = new BrandCarDto(1, "bmw");
-
-        List<BrandCarDto> brandCarDtos = List.of(brandCarDto);
         Car car = new Car(1, "bmw",new Brand(2,"a8"));
-        Brand brand= new Brand(2,"a8",List.of(car));
-        List<Car> cars = List.copyOf(List.of(car));
+        Car car1 = new Car(2, "audi",new Brand(2,"a8"));
+        BrandCarDto brandCarDto = new BrandCarDto(car.getCarId(), car.getCarName());
+        BrandCarDto brandCarDto1 = new BrandCarDto(car1.getCarId(), car1.getCarName());
+
+        List<BrandCarDto> brandCarDtos = Arrays.asList(brandCarDto,brandCarDto1);
+
+        Brand brand= new Brand(2,"a8",Arrays.asList(car,car1));
+        List<Car> cars = Arrays.asList(car,car1);
+
 
         when(brandDao.findById(brandId)).thenReturn(Optional.of(brand));
-       when(modelMapper.map(ArgumentMatchers.any(),ArgumentMatchers.any())).thenReturn(brandCarDto);
+        when(brandCarDtoConverter.convert(cars)).thenReturn(brandCarDtos);
+
         List<BrandCarDto> result = brandManager.getAllCarByBrandId(brandId);
         assertEquals(brandCarDtos,result);
 
         verify(brandDao).findById(brandId);
-        verify(modelMapper).map(car,BrandCarDto.class);
+        verify(brandCarDtoConverter).convert(cars);
 
 
 
